conjure-typescript/src/test/resources/errors/expected/@palantir/another/index.ts
export { IDifferentPackage } from "@palantir/another/errors";
